// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUICompositionDetailHeader> renders basic example 1`] = `
<div
  className="xui-composition xui-composition-detailheader xui-composition-is-finite"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionDetailHeader> should do nothing with children 1`] = `
<div
  className="xui-composition xui-composition-detailheader xui-composition-is-finite"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;

exports[`<XUICompositionDetailHeader> should include custom class and omit width-limiting class, if specified 1`] = `
<div
  className="xui-composition xui-composition-detailheader single-with-head"
>
  <div
    className="xui-gridarea-header"
  >
    <div />
  </div>
  <div
    className="xui-gridarea-main"
  >
    <div />
  </div>
</div>
`;
